# haskell-chess

./: LICENSE  chess.cabal
app/: Main.hs
src/: Chess.hs  Lib.hs
test/: ChessSpec.hs
