name:                chess
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/7hoenix/chess#readme
license:             BSD3
license-file:        LICENSE
author:              j7hoenix (Justin Holzmann)
maintainer:          jpholzmann@gmail.com
copyright:           2018 j7hoenix
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Chess
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable chess-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , chess
                     , trifecta
  default-language:    Haskell2010

test-suite chess-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , chess
                     , hspec
                     , hspec-discover
                     , test-framework
                     , test-framework-quickcheck2
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/7hoenix/chess
